--- a/overmij.html
+++ b/overmij.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="menu">
-        <a href="index.html" class="menuknop:hover" class="menuknop">Home</a>
+        <a href="index.html" class="menuknop">Home</a>
         <a href="overmij.html" class="active" class="menuknop">Over mij</a>
         <a href="portfolio.html" class="menuknop">Portfolio</a>
         <a href="contact.html" class="menuknop">Contact</a>
