--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="10">
-    <title>Mijn Portofolio</title>
+    <title>Luca Lardenoije</title>
     <link rel="stylesheet" href="astyle.css">
 </head>
 <body>
     <div id="menu">
     
-        <a href="index.html" class="active" class="menuknop">Home</a>
+        <a href="home.html" class="active" class="menuknop">Home</a>
         <a href="overmij.html" class="menuknop">Over mij</a>
         <a href="portfolio.html" class="menuknop">Portfolio</a>
         <a href="contact.html" class="menuknop">Contact</a>
