--- a/index.html
+++ b/index.html
@@ -27,4 +27,9 @@
  
     <div class="image">
         <img class="image1" src="Logo1.PNG" width="100px" height="100px">
+
+    <div class="changelog">
+        <h5>Changelog</h5>
+        <h6>16-9-2020 - added changelog</h6>
+    </div>
 </html>
