--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="title">
         <h2>Welkom op mijn website!</h2>
         <h6>Luca Lardenoije</h6>
+    
     </div>
 
  
@@ -30,6 +31,14 @@
 
     <div class="changelog">
         <h5>Changelog</h5>
-        <h6>16-9-2020 - added changelog</h6>
+        <h6>16-9-2020 - added changelog <br /> 16-9-2020 - added hover <br /> 16-9-2020 - added footer/text</h6>
     </div>
+
+    <div class="footer">
+        <p>Made by: <br /> Luca Lardenoije</p>
+    <div class="text">
+        <p>Vista College <br /> Software Developer</p>
+    </div>
+    
+
 </html>
