--- a/overmij.html
+++ b/overmij.html
@@ -19,6 +19,12 @@
 <div class="image">
     <img class="image1" src="Logo1.PNG" width="100px" height="100px">
 
+    <div class="footer">
+        <p>Made by: <br /> Luca Lardenoije</p>
+    <div class="text">
+        <p>Vista College <br /> Software Developer</p>
+    </div>
+
     
    
 </html>
