--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="10">
+    <meta http-equiv="refresh" content="100">
     <title>Mijn Portofolio</title>
     <link rel="stylesheet" href="astyle.css">
 </head>
@@ -18,6 +18,12 @@
 
 <div class="image">
     <img class="image1" src="Logo1.PNG" width="100px" height="100px">
+
+    <div class="footer">
+        <p>Made by: <br /> Luca Lardenoije</p>
+    <div class="text">
+        <p>Vista College <br /> Software Developer</p>
+    </div>
 
     
    
