--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="changelog">
         <h5>Changelog</h5>
-        <h6>16-9-2020 - added changelog <br /> 16-9-2020 - added hover <br /> 16-9-2020 - added footer/text</h6>
+        <h6>15-9-2020 - added background/logo<br />15-9-2020 - added text/buttons<br />15-9-2020 - added other pages<br />16-9-2020 - added changelog <br /> 16-9-2020 - added hover <br /> 16-9-2020 - added footer/text</h6>
     </div>
 
     <div class="footer">
