--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,23 @@
 
     <div class="footer">
         <p>Made by: <br /> Luca Lardenoije</p>
-    <div class="text">
-        <p>Vista College <br /> Software Developer</p>
+        </div>
+    
     </div>
+    <div class="text"><div class="footer2">
+        <p>Vista College<br />Software Developer</p>
+    </div>
+   
+</div>
+<meta name="vieuwport" content="width=device-width, initial-scale-=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<body>
+    <div class="image2"><div class="footer3">
+    <a href="https://www.instagram.com/lucalardenoije/" class="btn"></a>
+    <img src="instagram.png" height="50px" width="50px">
+    </div>
+</body>
 
     
    
