--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="100">
-    <title>Mijn Portofolio</title>
+    <title>Portofolio</title>
     <link rel="stylesheet" href="astyle.css">
 </head>
 <body>
@@ -37,6 +37,19 @@
     <a href="https://www.instagram.com/lucalardenoije/" class="btn"></a>
     <img src="instagram.png" height="50px" width="50px">
     </div>
+<div class="header">
+    <h1>Challenge 1</h1>
+</div>
+
+<div class="image3">
+<a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2"></a>
+<img src="Vista.webp" height="50px" width="100px">
+</div>
+
+<div class="textporto">
+    <p>14-9-2020 - designed site<br />15-9-2020 - added background/logo<br />15-9-2020 - added text/buttons<br />15-9-2020 - added other pages<br />16-9-2020 - added changelog <br /> 16-9-2020 - added hover <br /> 16-9-2020 - added footer/text <br />16-9-2020 - added instagram</p>
+</div>
+
 </body>
 
     
