--- a/overmij.html
+++ b/overmij.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="10">
-    <title>Mijn Portofolio</title>
+    <title>Overmij</title>
     <link rel="stylesheet" href="astyle.css">
 </head>
 <body>
@@ -37,7 +37,17 @@
     <a href="https://www.instagram.com/lucalardenoije/" class="btn"></a>
     <img src="instagram.png" height="50px" width="50px">
     </div>
+<div class="header">
+    <h1>Challenge 1</h1>
+</div>
+
+<div class="image3">
+<a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2"></a>
+<img src="Vista.webp" height="50px" width="100px">
+</div>
+
 </body>
+
 
     
     
