--- a/overmij.html
+++ b/overmij.html
@@ -46,6 +46,10 @@
 <img src="Vista.webp" height="50px" width="100px">
 </div>
 
+<div class="comingsoon">
+<p>Coming soon!</p>
+</div>
+
 </body>
 
 
