--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="changelog">
         <h5>Changelog</h5>
-        <h6>14-9-2020 - designed site<br />15-9-2020 - added background/logo<br />15-9-2020 - added text/buttons<br />15-9-2020 - added other pages<br />16-9-2020 - added changelog <br /> 16-9-2020 - added hover <br /> 16-9-2020 - added footer/text <br />16-9-2020 - added instagram</h6>
+        <h6>14-9-2020 - designed site<br />15-9-2020 - added background/logo<br />15-9-2020 - added text/buttons<br />15-9-2020 - added other pages<br />16-9-2020 - added changelog <br /> 16-9-2020 - added hover <br /> 16-9-2020 - added footer/text <br />16-9-2020 - added instagram<br />17-9-2020 - added colors<br />17-9-2020 - added vista logo/link<br />17-9-2020 - added style</h6>
     </div>
 
     <div class="footer">
