--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="50">
-    <title>Contac</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="astyle.css">
 </head>
 <body>
