--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,9 @@
     <title>Contact</title>
     <link rel="stylesheet" href="astyle.css">
 </head>
+
+<!--Hoofdmenu-->
+
 <body>
     <div id="menu">
         <a href="home.html" class="menuknop">Home</a>
@@ -16,10 +19,12 @@
     </div>
 </body>
 
+<!--Afbeelding-logo-->
+
 <div class="image">
     <img class="image1" src="Logo1.PNG" width="100px" height="100px">
 
-    <div class="footer">
+<div class="footer">
         <p>Made by: <br /> Luca Lardenoije</p>
         </div>
     
@@ -34,7 +39,7 @@
 
 <body>
     <div class="image2"><div class="footer3">
-    <a href="https://www.instagram.com/lucalardenoije/" class="btn"></a>
+    <a href="https://www.instagram.com/lucalardenoije/" class="btn" target=_blank></a>
     <img src="instagram.png" height="50px" width="50px">
     </div>
 <div class="header">
@@ -42,7 +47,7 @@
 </div>
 
 <div class="image3">
-<a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2"></a>
+<a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target=_blank></a>
 <img src="Vista.webp" height="50px" width="100px">
 </div>
 
