--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
 
 <body>
     <div class="image2"><div class="footer3">
-    <a href="https://www.instagram.com/lucalardenoije/" class="btn"></a>
+    <a href="https://www.instagram.com/lucalardenoije/" class="btn" target="_blank"></a>
     <img src="instagram.png" height="50px" width="50px">
     </div>
 <div class="header">
@@ -59,7 +59,7 @@
 </div>
 
 <div class="image3">
-<a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2"></a>
+<a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target=_blank></a>
 <img src="Vista.webp" height="50px" width="100px">
 </div>
 
