--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     <div id="menu">
     
         <a href="home.html" class="active" class="menuknop">Home</a>
-        <a href="overmij.html" class="menuknop">Over mij</a>
         <a href="portfolio.html" class="menuknop">Portfolio</a>
+        <a href="overmij.html" class="menuknop">Over mij</a>
         <a href="contact.html" class="menuknop">Contact</a>
 
     </div>
@@ -60,7 +60,7 @@
 
 <div class="image3">
 <a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target=_blank></a>
-<img src="Vista.webp" height="50px" width="100px">
+<img src="Vista.webp" style="width: 30%";>
 </div>
 
 </body>
