--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
 
 <div class="image3">
 <a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target=_blank></a>
-<img src="Vista.webp" style="width: 30%";>
+<img src="Vista.webp" height="50px" width="100px">
 </div>
 
 </body>
