--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Website over Luca Lardenoije, Challenge 1">
+  <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca">
+  <meta name="author" content="Luca Lardenoije">
     <meta http-equiv="refresh" content="5">
     <title>Luca Lardenoije</title>
     <link rel="stylesheet" href="astyle.css">
@@ -12,7 +15,7 @@
     <!--MenuBalk-->
     <div id="menu">
     
-        <a href="home.html" class="menuknop">Home</a>
+        <a href="index.html" class="menuknop">Home</a>
         <a href="portfolio.html" class="active" class="menuknop">Portfolio</a>
         <a href="overmij.html" class="menuknop">Over mij</a>
         <a href="contact.html" class="menuknop">Contact</a>
