--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website over Luca Lardenoije, Challenge 1">
-  <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca">
+    <meta name="description" content="Website over web-developer Luca Lardenoije, Challenge 1">
+  <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
   <meta name="author" content="Luca Lardenoije">
   <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
     <meta http-equiv="refresh" content="5">
@@ -60,11 +60,6 @@
     <img src="Vista.webp" height="50px" width="100px">
 
     </div>
-
-<div class="verificatie">
-    <p>google-site-verification: google5f63f50bb8fff7ef.html</p>
-</div>
-
 </body>
 
 </html>
