--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,78 @@
-.
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Website over web-developer Luca Lardenoije, Challenge 1">
+        <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
+        <meta name="author" content="Luca Lardenoije">
+        <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
+        <meta http-equiv="refresh" content="10">
+        <title>Luca Lardenoije</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+<body>
+    <header>
+        <div class="vista-logo">
+            <a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target="_blank"></a>
+            <img src="Vista.webp" width="100px" height="50px">
+        </div>
+        <div class="afbeelding-logo">
+             <a href="index.html" class="btn"></a>
+             <img src="logo.PNG" width="100px" height="50px">
+             </div>
+        <nav>
+            <ul>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="overmij.html">Over mij</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            
+        </nav>
+    </header>
+    <main>
+        <section class="index-banner">
+            <div class="vertical-center">
+                <h2>Contact</h2>
+                <h1>Challenge 1</h1>
+            </div>
+        </section>
+        <section class="index-links">
+            <a href="portfolio.html">
+                <div class="index-boxlink-1">
+                    <h3>Portfolio</h3>
+                </div>
+            </a>
+            <a href="overmij.html">
+                <div class="index-boxlink-2">
+                    <h3>Over mij</h3>
+                </div>
+            </a>
+            <a href="contact.html">
+                <div class="index-boxlink-3">
+                    <h3>Contact</h3>
+                </div>
+            </a>
+        </section>
+    </main>
+
+    <footer>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="overmij.html">Over mij</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="footer-instagram">
+            <a href="https://www.instagram.com/lucalardenoije/" target="_blank">
+                <img src="instagram.png" alt="instagram logo" width="50px" height="50px">
+            </a>
+        </div>
+        <div class="madeby">
+            <h4>Made by:<br>Luca Lardenoije</h4>
+    </div>
+    </footer>
+    
+    </body>
+</html>
