--- a/contact.html
+++ b/contact.html
@@ -32,16 +32,18 @@
         </nav>
     </header>
     <main>
-        <div class="contact">
-            <h2>Telefoonnummer</h2>
-            <p>06-40422827</p>
-        </div>
         <section class="index-banner">
             <div class="vertical-center">
                 <h2>Contact</h2>
                 <h1>Challenge 1</h1>
             </div>
         </section>
+
+            <!--Tekst!-->
+            <div class="contact">
+            <p>Telefoonnummer<br>06-40422827</p>
+        </div>
+
         <section class="index-links">
             <a href="portfolio.html">
                 <div class="index-boxlink-1">
@@ -61,6 +63,7 @@
         </section>
     </main>
     <footer>
+        <hr />
         <ul>
             <li><a href="index.html" class="menuknop">Home</a></li>
             <li><a href="portfolio.html" class="menuknop">Portfolio</a></li>
