--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header>
         <div class="vista-logo">
             <a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target="_blank"></a>
-            <img src="Vista.webp" width="100px" height="50px">
+            <img src="img/vista.webp" width="100px" height="50px">
         </div>
         <div class="afbeelding-logo">
              <a href="index.html" class="btn"></a>
-             <img src="logo.PNG" width="100px" height="50px">
+             <img src="img/logo.PNG" width="100px" height="50px">
              </div>
         <nav>
             <ul>
@@ -66,11 +66,11 @@
         </ul>
         <div class="footer-instagram">
             <a href="https://www.instagram.com/lucalardenoije/" target="_blank">
-                <img src="instagram.png" alt="instagram logo" width="50px" height="50px">
+                <img src="img/instagram.png" alt="instagram logo" width="50px" height="50px">
             </a>
         </div>
         <div class="madeby">
-            <h4>Made by:<br>Luca Lardenoije</h4>
+            <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
     </div>
     </footer>
     
