--- a/overmij.html
+++ b/overmij.html
@@ -17,11 +17,11 @@
     <header>
         <div class="vista-logo">
             <a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target="_blank"></a>
-            <img src="Vista.webp" width="100px" height="50px">
+            <img src="img/vista.webp" width="100px" height="50px">
         </div>
         <div class="afbeelding-logo">
              <a href="index.html" class="btn"></a>
-             <img src="logo.PNG" width="100px" height="50px">
+             <img src="img/logo.PNG" width="100px" height="50px">
              </div>
         <nav>
             <ul>
@@ -36,7 +36,7 @@
         <section class="index-banner">
             <div class="vertical-center">
                 <h2>Over mij</h2>
-                <h1>Challenge 1</h1>
+                <h1>Challenge 1<br>(Privé! stuur een mail naar: 501121@vistacollege.nl</h1>
             </div>
         </section>
         <section class="index-links">
@@ -57,7 +57,6 @@
             </a>
         </section>
     </main>
-
     <footer>
         <hr />
         <ul>
@@ -68,11 +67,11 @@
         </ul>
         <div class="footer-instagram">
             <a href="https://www.instagram.com/lucalardenoije/" target="_blank">
-                <img src="instagram.png" alt="instagram logo" width="50px" height="50px">
+                <img src="img/instagram.png" alt="instagram logo" width="50px" height="50px">
             </a>
         </div>
         <div class="madeby">
-            <h4>Made by:<br>Luca Lardenoije</h4>
+            <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
     </div>
     </footer>
     
