--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
     <header>
         <div class="vista-logo">
             <a href="https://vistacollege.nl/opleiding/applicatie-en-media-ontwikkelaar" class="btn2" target="_blank"></a>
-            <img src="Vista.webp" width="100px" height="50px">
+            <img src="img/vista.webp" width="100px" height="50px">
         </div>
         <div class="afbeelding-logo">
              <a href="index.html" class="btn"></a>
-             <img src="logo.PNG" width="100px" height="50px">
+             <img src="img/logo.PNG" width="100px" height="50px">
              </div>
         <nav>
             <ul>
@@ -38,6 +38,12 @@
                 <h1>Challenge 1</h1>
             </div>
         </section>
+        <div class="portfolio-bestand">
+            <a href="https://lucalardenoije.nl/index.html" target="_blank">Ga naar mijn online website - Ook voor de telefoon!</a><br>
+            <a href="download/BURGERSCHAP.docx">Download Burgerschap</a><br>
+            <a href="download/Oefening - Opleidingsbeeld.pdf">Download SLB-Opleidingsbeeld</a><br>
+            <a href="download/Persoonlijk statuut.docx">Download SLB-statuut</a>
+        </div>
         <section class="index-links">
             <a href="portfolio.html">
                 <div class="index-boxlink-1">
@@ -67,11 +73,11 @@
         </ul>
         <div class="footer-instagram">
             <a href="https://www.instagram.com/lucalardenoije/" target="_blank">
-                <img src="instagram.png" alt="instagram logo" width="50px" height="50px">
+                <img src="img/instagram.png" alt="instagram logo" width="50px" height="50px">
             </a>
         </div>
         <div class="madeby">
-            <h4>Made by:<br>Luca Lardenoije</h4>
+            <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
     </div>
     </footer>
     
