--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,10 @@
                 <img src="img/instagram.png" alt="instagram logo" width="50px" height="50px">
             </a>
         </div>
+            <div class="counter">
+                <p>Visitors</p>
+                <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvvfnqkp&nd=6&style=31" border="0" alt="web counter"></a>
+             </div>
         <div class="madeby">
             <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
     </div>
