--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
         <meta name="author" content="Luca Lardenoije">
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
-        <meta http-equiv="refresh" content="500">
+        <meta http-equiv="refresh" content="600">
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -38,6 +38,12 @@
                 <h1>Challenge 1</h1>
             </div>
         </section>
+        <!--Tekst-->
+        <div class="contacttekst">
+            <p>School mail: 501121@vistacollege.nl<br>
+                Privé mail: lucalardenoije@hotmail.com<br>
+                Telefoonnummer: 06-40422827<br></p>
+        </div>
         <section class="index-links">
             <a href="portfolio.html">
                 <div class="index-boxlink-1">
@@ -70,10 +76,6 @@
                 <img src="img/instagram.png" alt="instagram logo" width="50px" height="50px">
             </a>
         </div>
-            <div class="counter">
-                <p>Visitors</p>
-                <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvvfnqkp&nd=6&style=31" border="0" alt="web counter"></a>
-             </div>
         <div class="madeby">
             <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
     </div>
