--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
         <meta name="author" content="Luca Lardenoije">
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
-        <meta http-equiv="refresh" content="500">
+        <meta http-equiv="refresh" content="600">
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -72,7 +72,7 @@
         </div>
             <div class="counter">
                 <p>Visitors</p>
-                <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvvfnqkp&nd=6&style=31" border="0" alt="web counter"></a>
+                <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gevfnqfp&nd=6&style=26" border="0" alt="free counter"></a>
             </div>
         <div class="madeby">
             <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
