--- a/overmij.html
+++ b/overmij.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
         <meta name="author" content="Luca Lardenoije">
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
-        <meta http-equiv="refresh" content="500">
+        <meta http-equiv="refresh" content="600">
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +36,7 @@
         <section class="index-banner">
             <div class="vertical-center">
                 <h2>Over mij</h2>
-                <h1>Challenge 1<br>(Privé! stuur een mail naar: 501121@vistacollege.nl</h1>
+                <h1>Challenge 1<br>(Privé! stuur een mail naar: 501121@vistacollege.nl)</h1>
             </div>
         </section>
         <section class="index-links">
@@ -70,10 +70,6 @@
                 <img src="img/instagram.png" alt="instagram logo" width="50px" height="50px">
             </a>
         </div>
-            <div class="counter">
-                <p>Visitors</p>
-                <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvvfnqkp&nd=6&style=31" border="0" alt="web counter"></a>
-            </div>
         <div class="madeby">
             <h4>Made by:<br>Luca Lardenoije</h4> <br> <h6>Luca Lardenoije © 2020</h6>
     </div>
