--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview');
+</script>
+        <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Website over web-developer Luca Lardenoije, Challenge 1">
         <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
         <meta name="author" content="Luca Lardenoije">
-        <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
         <meta http-equiv="refresh" content="600">
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
