--- a/overmij.html
+++ b/overmij.html
@@ -36,7 +36,7 @@
         <section class="index-banner">
             <div class="vertical-center">
                 <h2>Over mij</h2>
-                <h1>Challenge 1<br>(Privé! stuur een mail naar: 501121@vistacollege.nl)</h1>
+                <h1>Challenge 1<br>(Privé!)</h1>
             </div>
         </section>
         <section class="index-links">
