--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4GBV353935"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4GBV353935');
+</script>
 
                         <!-- Google Tag Manager -->
                 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -10,15 +19,6 @@
                     })(window,document,'script','dataLayer','GTM-WT3WNFF');</script>
                     <!-- End Google Tag Manager -->
 
-                        <!-- Global site tag (gtag.js) - Google Analytics -->
-                    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GBV353935"></script>
-                    <script>
-                        window.dataLayer = window.dataLayer || [];
-                        function gtag(){dataLayer.push(arguments);}
-                        gtag('js', new Date());
-
-                        gtag('config', 'G-4GBV353935');
-                    </script>
                     <!-- Google Analytics -->
                         <script>
                             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -26,11 +26,16 @@
                             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                             })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
                             
-                            ga('create', 'UA-XXXXX-Y', 'auto');
                             ga('send', 'pageview');
+                            ga('create', {
+                                trackingId: 'G-4GBV353935',
+                                cookieDomain: 'auto',
+                                name: 'myTracker',
+                                userId: '179039184'
+                                });
                             </script>
                             <!-- End Google Analytics -->
-                            
+
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
