--- a/index.html
+++ b/index.html
@@ -11,35 +11,30 @@
   gtag('config', 'G-4GBV353935');
 </script>
 
-                        <!-- Google Tag Manager -->
-                <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-                    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-                    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-                    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-                    })(window,document,'script','dataLayer','GTM-WT3WNFF');</script>
-                    <!-- End Google Tag Manager -->
+        <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WT3WNFF');</script>
+    <!-- End Google Tag Manager -->
 
-                    <!-- Google Analytics -->
-                        <script>
-                            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-                            
-                            ga('send', 'pageview');
-                            ga('create', {
-                                trackingId: 'G-4GBV353935',
-                                cookieDomain: 'auto',
-                                name: 'myTracker',
-                                userId: '179039184'
-                                });
-                            </script>
-                            <!-- End Google Analytics -->
-
-                            <?xml version="1.0"?>
-<users>
-	<user>DB8EAA84FCC82DA08356B921B6278B93</user>
-</users>
+<!-- Google Analytics -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('send', 'pageview');
+    ga('create', {
+        trackingId: 'G-4GBV353935',
+        cookieDomain: 'auto',
+        name: 'myTracker',
+        userId: '179039184'
+        });
+    </script>
+    <!-- End Google Analytics -->
 
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
         <meta charset="UTF-8">
@@ -48,6 +43,7 @@
         <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
         <meta name="author" content="Luca Lardenoije">
         <meta http-equiv="refresh" content="600">
+        <meta name="msvalidate.01" content="DB8EAA84FCC82DA08356B921B6278B93" />
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
