--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Website over web-developer Luca Lardenoije, Challenge 1">
+        <meta name="description" content="Portfolio Software Developer Luca Lardenoije">
         <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
         <meta name="author" content="Luca Lardenoije">
         <meta http-equiv="refresh" content="600">
