--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Portfolio Software Developer Luca Lardenoije">
-        <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
+        <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope, Lardenoije, lardenoije
+        luca, Luca, luca lardenoije.nl, Luca Lardenoije.nl, lucalardenoije.nl, Luca lardenoije.nl, software developer, softwaredeveloper, lucalardenoije, LucaLardenoije, .nl">
         <meta name="author" content="Luca Lardenoije">
         <meta http-equiv="refresh" content="600">
         <meta name="msvalidate.01" content="DB8EAA84FCC82DA08356B921B6278B93" />
