--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,12 @@
         <meta name="google-site-verification" content="IEfFOVmS386FjpDgFrBlBptpA-1mYfOSOoUTXRNISI0" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Website over web-developer Luca Lardenoije, Challenge 1">
-        <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope">
+        <meta name="description" content="Portfolio Software Developer Luca Lardenoije">
+        <meta name="keywords" content="HTML, CSS, lucalardenoije, Challenge 1, Luca Lardenoije, Lardenoije Luca, luca lardenoije, websitebouwer, website bouwer, goedkoop, goedkope, Lardenoije, lardenoije
+        luca, Luca, luca lardenoije.nl, Luca Lardenoije.nl, lucalardenoije.nl, Luca lardenoije.nl, software developer, softwaredeveloper, lucalardenoije, LucaLardenoije, .nl">
         <meta name="author" content="Luca Lardenoije">
         <meta http-equiv="refresh" content="600">
+        <meta name="msvalidate.01" content="DB8EAA84FCC82DA08356B921B6278B93" />
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
