--- a/overmij.html
+++ b/overmij.html
@@ -13,6 +13,7 @@
         <title>Luca Lardenoije</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" href="img/logo.PNG" type="image/gif">
         <script src="functions.js"></script>
     </head>
 <body>
