--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="img/logo.PNG" type="image/gif">
         <script src=""></script>
+        <script data-ad-client="ca-pub-5380021107426905" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
