--- a/portfolio.html
+++ b/portfolio.html
@@ -41,30 +41,34 @@
                 <h1>Challenge 1</h1>
             </div>
         </section>
-        <div class="portfolio-bestand">
-            <a href="https://lucalardenoije.nl/index.html" target="_blank">Ga naar mijn online website - Ook voor de telefoon!</a><br>
-            <a href="download/BURGERSCHAP.docx">Download Burgerschap</a><br>
-            <a href="download/Oefening - Opleidingsbeeld.pdf">Download SLB-Opleidingsbeeld</a><br>
-            <a href="download/Persoonlijk statuut.docx">Download SLB-statuut</a><br>
-            <a href="download/Ideal workplace.docx">Download English-Workplace</a>
+
+        <section class="portfolio-links"> 
+        <div class="wrapper">
+            <div class="portfolio-link">
+                <a href="https://lucaportfolio.nl/">
+                <img src="img/telefoon-tablet-pc.png" width="240px" height="200px">
+            </a>
+                <p>Example webshop</p>
+            </div><div class="portfolio-link">
+                <p>Site 2</p>
+            </div><div class="portfolio-link">
+                <p>Site 3</p>
+            </div><div class="portfolio-link">
+                <p>Site 4</p>
+            </div><div class="portfolio-link">
+                <p>Site 5</p>
+            </div><div class="portfolio-link">
+                <p>Site 6</p>
+            </div><div class="portfolio-link">
+                <p>Site 7</p>
+            </div><div class="portfolio-link">
+                <p>Site 8</p>
+            </div>
         </div>
-        <section class="index-links">
-            <a href="portfolio.html">
-                <div class="index-boxlink-1">
-                    <h3>Portfolio</h3>
-                </div>
-            </a>
-            <a href="overmij.html">
-                <div class="index-boxlink-2">
-                    <h3>Over mij</h3>
-                </div>
-            </a>
-            <a href="contact.html">
-                <div class="index-boxlink-3">
-                    <h3>Contact</h3>
-                </div>
-            </a>
+            
         </section>
+
+       
     </main>
 
     <footer>
