--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,12 @@
                 <a href="https://lucaportfolio.nl/">
                 <img src="img/telefoon-tablet-pc.png" width="240px" height="200px">
             </a>
-                <p>Example webshop</p>
+                <p>Computer webshop</p>
             </div><div class="portfolio-link">
-                <p>Site 2</p>
+                <a href="https://kantine.lucaportfolio.nl/index.html">
+                    <img src="img/telefoon-tablet-pckantine.png" width="240px" height="200px">
+                </a>
+                <p>Food webshop (in the making)</p>
             </div><div class="portfolio-link">
                 <p>Site 3</p>
             </div><div class="portfolio-link">
